Fixing issues found in the first review.
The issues raised by the reviewer:
1. There are a few issues regarding flexbox. Please make sure not to use display: block, float or position to control the layout, because flexbox can do that :) Also, it's important that all elements are inside the flex container.
2. The text at the bottom is off the screen. (email address goes partially off screen in narrow viewports)

Re 1. Removed all display: block occurences that do not turn on elements previously hidden by display: none. The ones used solely for reversing display: none remain in the code.
Re 2. In narrow viewports the footer elements get stacked in one column.

--- a/css/portfolio_mariola_karpiewska.css
+++ b/css/portfolio_mariola_karpiewska.css
@@ -23,20 +23,24 @@ header {
 	width: 100%;
 }
 
-img, embed, object, video {
+img,
+embed,
+object,
+video {
 	max-width: 100%;
 }
 
 .nav-list {
 	list-style-type: none;
-	padding: 0;
+	padding-left: 0;
+	padding-top: 1px;
 	width: 100%;
-	background-color: #555;
-	left: 0;
+	background: linear-gradient(#555, #777);
 	display: none;
 }
 
-.open {
+.open,
+.be-flex {
 	display: flex;
 	flex-wrap: wrap;
 }
@@ -57,19 +61,10 @@ img, embed, object, video {
 	border: 1px solid #666;
 }
 
-.brag-item-a {
-	color: black;
-	text-decoration: none;
-}
-
-.nav-a:hover, .foot-a:hover {
+.nav-a:hover,
+.foot-a:hover {
 	margin: 2px;
 	border: 1px solid #fff;
-}
-
-.be-flex {
-	display: flex;
-	flex-wrap: wrap;
 }
 
 .logo {
@@ -116,17 +111,17 @@ h2 {
 	color: red;
 }
 
-nav {
-	display: flex;
-	flex-wrap: wrap;
-	width: 100%;
-}
-
 .hamburger {
 	order: 0;
 	margin-left: auto;
 	width: 76px;
 	height: 76px;
+}
+
+nav {
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
 }
 
 .top-area-picture {
@@ -159,21 +154,20 @@ main {
 	background: linear-gradient(#fff, #ddd, #fff);
 }
 
-.brag-reason {
-	width: 100%;
-}
-
-.brag-list {
+.brag-reason,
+.brag-list,
+.brag-image {
 	width: 100%;
 }
 
 .brag-item {
 	width: 100%;
-	padding: 0.5% 0.5% 0.5% 0.5%;
+	padding: 0.5%;
 }
 
-.brag-image {
-	width: 100%;
+.brag-item-a {
+	color: black;
+	text-decoration: none;
 }
 
 footer {
@@ -188,10 +182,10 @@ footer {
 
 .p-footer {
 	display: inline-block;
-	width: 25%;
+	min-width: 25%;
 	margin-left: 7%;
 	text-align: left;
-	font-size: 12px;
+	font-size: 10px;
 }
 
 .foot-a {
@@ -312,24 +306,12 @@ footer {
 	}
 
 	.nav-list {
-		background: linear-gradient(#555, #777);
-		position: relative;
-		width: 100%;
 		display: flex;
 		flex-wrap: nowrap;
-		left: 0;
-		visibility: visible;
-		top: 0;
 	}
 
 	.hamburger {
 		display: none;
-	}
-
-	nav {
-		order: 0;
-		margin-left: auto;
-		width: 100%;
 	}
 
 	.top-area-sign {
@@ -346,11 +328,15 @@ footer {
 @media screen and (min-width: 551px) {
 	.brag-item {
 		width: 32.333333%;
-		padding: 0.5% 0.5% 0.5% 0.5%;
+		padding: 0.5%;
 	}
 
 	.main-description {
 		font-size: 20px;
+	}
+
+	.p-footer {
+		font-size: 14px;
 	}
 }
 
@@ -380,10 +366,6 @@ footer {
 
 	.long-name {
 		font-size: 50px;
-	}
-
-	.p-footer {
-		font-size: 14px;
 	}
 }
 
